package CA1;

import java.util.AbstractList;
import java.util.ArrayList;
import java.util.List;

public class Mystream <T> {
    List<MystreamListener> listeners = new ArrayList<MystreamListener>() ;
    Client stream;
    void listen(T t) {

    }

    void addListener(MystreamListener listener) {

    }

}
