package CA1;

import java.util.ArrayList;
import java.util.List;

public interface MystreamListener {
    void listen(T t);
}